[package]
authors = ["Alexander Thaller <alexander.thaller@trivago.com>"]
name = "lablog_store_csv"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = """
CSV file store for lablog.
"""
documentation = "https://github.com/lablog-rs/lablog_store_csv"
homepage = "https://github.com/lablog-rs/lablog_store_csv"
repository = "https://github.com/lablog-rs/lablog_store_csv"

[dependencies]
csv = "1.0.0-beta.5"
log = "0.3"
walkdir = "2.0"

[dependencies.lablog_store]
git = "https://github.com/lablog-rs/lablog_store"

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "0.4"

[dev-dependencies.chrono]
features = ["serde"]
version = "0.4"
